# CAT

./:  installing-cat-tutorial_ch.md  .gitignore  EnvSetup_tutorial.md  EnvSetup_tutorial_ch.md  README.md  RequestForExperiments.md  RequestTowardsExperiment.md  conformer.md  faq_ch.md  install.md  install.sh  install_ch.md  installing-cat-tutorial.md  joinAP_tutorial.md  joinap.md  joinap_tutorial_ch.md  requirements.txt  setup.py  toolkitworkflow.md  wordpieces.md  yesno_tutorial.md
cat/: __init__.py
cat/ctc/: __init__.py  cal_logit.py  decode.py  decode_jsa.py  decode_jsa_g2p.py  decode_jsa_mls.py  decode_jsa_s2p.py  decode_me2e.py  fst_decode.sh  train.py  train_jsa.py  train_me2e.py  train_me2e_chunk.py  train_me2e_kaldi.py  train_me2e_kaldi_chunk.py  train_unified.py
cat/front/: beamformer_net.py  conv_beamformer.py  dnn_beamformer.py  dnn_wpe_new.py  filter_net.py  kaldifbank.py  log_mel.py  mask_estimator.py  multi2mono.py  nets_utils.py  stft.py
cat/lm/: __init__.py  ppl.py  ppl_compute.py  rescore.py  train.py
cat/lm/trf/: model.py  train.py
cat/rnnt/: __init__.py  __main__.py  beam_search.py  ctct_decoder.py  decode.py  joiner.py  rnnt_decoder.py  train.py  train_unified.py
cat/shared/: __init__.py  _constants.py  coreutils.py  data.py  decoder.py  encoder.py  layer.py  manager.py  manager_jsa.py  manager_simu.py  manager_wo.py  scheduler.py  simu_net.py  specaug.py  tokenizer.py
cat/utils/: avgmodel.py  cleandir.py  parseopt.py  parseschema.py  plot_tb.py  wer.py
cat/utils/compat/: repl_am_to_encoder.py  update_transformer_lm.py
cat/utils/data/: _data_prep_kaldi.py  corpus2index.py  data_prep.py  data_prep_kaldi.sh  exclude_corpus.py  pack_corpus.py  prep_wds.py  resolvedata.py  text2nbest.py
cat/utils/lm/: interpolate_nbests.py  lmweight_search.py
cat/utils/pipeline/: _constants.py  asr.py  common_utils.py  lm.py  ngram.sh
cat/utils/tool/: build_ctc_topo.py  build_decoding_graph.sh  get_prune_args.py  pack_audios.py  pack_audios_multi.py  prep_bigcidian.sh  prep_decoding_graph_materials.py  prep_den_lm.sh  prep_syllable_converter.py  prep_wlm_lodr.sh
docker/: Dockerfile  README.md
docs/: ME2E_ASR.md  ME2E_ASR_ch.md  changelog.md  configure_guide.md  contributing.md  cuside-array.md  cuside.md  cuside_ch.md  energe-based_LM_training.md  energy-based_LM_training.md  guide_for_third_party_tools.md  how_to_prepare_large_dataset.md  how_to_prepare_large_dataset_ch.md  joinap_tutorial_ch.md  significance_test.md  toolkitworkflow.md  whatsnew.md  yesno_tutorial_ch.md
egs/IuMien/: README-zh.md  README.md
egs/IuMien/exp_dict/: lexicon  lexicon-2  lexicon-3
egs/IuMien/local/: bpe_wfst_run.sh  data_kaldi.sh  extract_fbank.py  fliter_data.py  get_lexicon.py  get_wordlist.py  lexicon_wfst_run.sh  process_model_for_subword_ft.py  split_data.py
egs/JSA-SPG/: cat  readme.md
egs/JSA-SPG/g2p_exp/: readme.md
egs/JSA-SPG/jsa_exp/: readme.md
egs/JSA-SPG/local/: eval_fst_decode.sh  lm_decode.sh  pkl_p2g_data.py  pkl_spg_data.py  replace_checkpoint.py  select_seq_via_phn_freq.py
egs/JSA-SPG/p2g_exp/: readme.md
egs/SPG-JSA/: readme.md
egs/SPG-JSA/data/: metainfo.json
egs/SPG-JSA/g2p_exp/: readme.md
egs/SPG-JSA/jsa_exp/: readme.md
egs/SPG-JSA/local/: word_list.py
egs/SPG-JSA/s2p_exp/: readme.md
egs/TEMPLATE/: README.md  auto_test.sh
egs/TEMPLATE/local/: audio2ark.sh  compute_fbank.py  data.sh  eval_fst_decode.sh  extract_feat.py  lm_data.sh  prep_wds.py  significance_test.py
egs/aishell/: README.md  RESULT.md  cat  cmd.sh  path.sh  result  run.sh  run_conformer.sh
egs/aishell/local/: aishell_data_prep.sh  aishell_prepare_phn_dict.sh  aishell_train_lms.sh  audio2ark.sh  data.sh  data_kaldi.sh  decode.sh  extract_meta.py  extract_meta_kaldi.sh  score.sh  wav_norm.py  wer_output_filter
egs/aishell4/: README.md  utils
egs/aishell4/local/: after_data_char_dealing.py  audio2ark_multi.sh  data_char_dealing.py  data_multi.sh  extract_fbank_multi.py  mix_gen.py  ori_data_prep.py
egs/commonvoice/: README.md  RESULT.md  path.sh  result  run.sh  run_mc.sh  run_wp.sh  steps  utils
egs/commonvoice/CommonVoice_pv/: de.npy  (+12 more)
egs/cv-lang10/: README.md  readme.md  run.sh
egs/formosa/: RESULTS  path.sh  run.sh  steps
egs/hkust/: path.sh  result  run.sh  utils
egs/libri/: README.md  RESULT.md  cmd.sh  path.sh  result  run.sh  run_wp.sh
egs/llm-p2g/: README.md  run_p2g.sh  utils
egs/swbd/: RESULT.md  ctc-crf  path.sh  result  run.sh  run_v2.sh  run_wp.sh  steps  utils
egs/thchs30/: JOB=1:  RESULT.md  cmd.sh  ctc-crf.textClipping  path.sh  result  result_details.md  run.sh  run_conformer.sh.sh
egs/wenetspeech/: README.md
egs/wsj/: README.md  RESULT.md  path.sh  result  run.sh  run_v2.sh
egs/yesno/: RESULT.md  cmd.sh  ctc-crf  path.sh  run.sh  steps  utils
scripts/ctc-crf/: _conformer.py  _layers.py  _specaug.py  calculate_logits.py  calculate_logits_chunk_context.py  calculate_logits_v2.py  convert_to.py  convert_to_hdf5.py  convert_to_hdf5_chunk.py  convert_to_pickle.py  convert_to_pickle_chunk.py  coreutils.py  ctc_compile_dict_token.sh  ctc_crf.py  dataset.py  dataset_pickle.py  decode.sh  kaldi_io.py  log_utils.py  mc_lingual.py  mc_lingual_bak.py  model.py  monitor.py  prep_ctc_trans.py  scheduler.py  spm_decode  train.py  train_chunk_context.py  train_chunk_twin_context.py  train_dist.py  train_dist_chunk_context.py  train_dist_chunk_twin_context.py  train_v2.py  utils.py
src/batchnorm_src/: LICENSE  Makefile  README.md  batchnorm_binding.c  batchnorm_binding.h  batchnorms_cuda_kernel.cu  batchnorms_cuda_kernel.h  build.py
src/ctc_crf/: Makefile  binding.cpp  binding.h  binding_1_0.cpp  binding_1_0.h  setup.py  setup_1_0.py
src/ctc_crf/gpu_ctc/: CMakeLists.txt  README.txt  ctc.h  ctc_entrypoint.cu  gpu_ctc.h  gpu_ctc_kernels.h
src/ctc_crf/gpu_ctc/contrib/moderngpu/include/device/: intrinsics.cuh
src/ctc_crf/gpu_den/: CMakeLists.txt  den_calculate.cu  fst_read.cc
src/ctc_crf/path_weight/: CMakeLists.txt  path_weight.cc
src/fst-decoder/: Makefile
src/g2p-tool/: build.sh
src/kaldi-patch/: latgen-faster.cc
(+983 files in other folders)
